--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
   scrolling_page_indicator: ^0.1.3
   google_fonts: ^1.1.0
   shared_preferences: ^0.5.11
+  http: ^0.12.2
+  cached_network_image: ^2.3.2+1
+
+
 
 dev_dependencies:
   flutter_test:
